--- a/functions/00001f48.toml
+++ b/functions/00001f48.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x1f48
 size = 0xf0
-last_change = 2023-12-12T19:30:06.950873Z
+last_change = 2023-12-12T19:30:06.969007Z
+
+[header]
+last_change = 2023-12-12T19:30:06.969007Z
+name = "main"
+addr = 0x1f48
