--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,17 +16,17 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3010]
+last_change = 2023-12-12T19:30:06.728200Z
+addr = 0x3010
+name = "aShellcodeVoid0"
+size = 0x20
+
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
 size = 0x9
-
-[0x30a2]
-last_change = 2023-12-12T19:30:06.711611Z
-addr = 0x30a2
-name = "aPayloadSize"
-size = 0xf
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
