--- a/structs/Elf64_Verneed.toml
+++ b/structs/Elf64_Verneed.toml
@@ -1,7 +1,7 @@
 [metadata]
 name = "Elf64_Verneed"
-size = 0x8
-last_change = 2023-12-10T08:13:30.753037Z
+size = 0xc
+last_change = 2023-12-12T19:30:06.844917Z
 
 [members.0x0]
 name = "vn_version"
@@ -18,5 +18,11 @@ size = 0x2
 [members.0x4]
 name = "vn_file"
 offset = 0x4
+type = "unsigned int"
+size = 0x4
+
+[members.0x8]
+name = "vn_aux"
+offset = 0x8
 type = ""
 size = 0x4
