--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.036990Z
-last_push_artifact = 0x3010
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:06.052908Z
+last_push_artifact = "Elf64_Verneed"
+last_push_artifact_type = "struct"
