--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,10 +28,10 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4f80]
-last_change = 2023-12-12T19:30:06.635753Z
-addr = 0x4f80
-name = "putchar_ptr"
+[0x5008]
+last_change = 2023-12-12T19:30:06.656444Z
+addr = 0x5008
+name = ""
 size = 0x8
 
 [0x5040]
