--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.635753Z
-last_push_artifact = 0x4f80
+last_push_time = 2023-12-12T19:30:06.656444Z
+last_push_artifact = 0x5008
 last_push_artifact_type = "global variable"
