--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,11 +22,11 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
-[0x30b1]
-last_change = 2023-12-12T19:30:06.188402Z
-addr = 0x30b1
-name = "aLu"
-size = 0x4
+[0x308f]
+last_change = 2023-12-12T19:30:06.205971Z
+addr = 0x308f
+name = "aShellcodeSize0"
+size = 0x13
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
