--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x674]
+last_change = 2023-12-12T19:30:06.352050Z
+addr = 0x674
+name = "aItmRegistertmc"
+size = 0x1a
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
