--- a/functions/00001d82.toml
+++ b/functions/00001d82.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x1d82
 size = 0x1c6
-last_change = 2023-12-12T19:30:07.267239Z
+last_change = 2023-12-12T19:30:07.283783Z
+
+[stack_vars.-0x50]
+last_change = 2023-12-12T19:30:07.283783Z
+offset = -80
+name = "nbytes"
+type = "size_t"
+size = 0x8
+addr = 0x1d82
