--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x20b8]
+last_change = 2023-12-12T19:30:07.179104Z
+addr = 0x20b8
+name = ".term_proc"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -15,12 +21,6 @@ last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
 name = "s"
 size = 0x53
-
-[0x3060]
-last_change = 2023-12-12T19:30:07.162045Z
-addr = 0x3060
-name = "aReading0x1000B"
-size = 0x2f
 
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
