--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:07.109725Z
-last_push_artifact = 0x1d82
+last_push_time = 2023-12-12T19:30:07.127192Z
+last_push_artifact = 0x2040
 last_push_artifact_type = "function"
