--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x1000]
+last_change = 2023-12-12T19:30:07.039537Z
+addr = 0x1000
+name = ".init_proc"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -27,12 +33,6 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4fb0]
-last_change = 2023-12-12T19:30:07.021726Z
-addr = 0x4fb0
-name = "read_ptr"
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
