--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:07.021726Z
-last_push_artifact = 0x4fb0
+last_push_time = 2023-12-12T19:30:07.039537Z
+last_push_artifact = 0x1000
 last_push_artifact_type = "global variable"
