--- a/functions/00002040.toml
+++ b/functions/00002040.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x2040
 size = 0x65
-last_change = 2023-12-12T19:30:07.127192Z
+last_change = 2023-12-12T19:30:07.144355Z
+
+[header]
+last_change = 2023-12-12T19:30:07.144355Z
+name = "init"
+addr = 0x2040
