--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:07.179104Z
-last_push_artifact = 0x20b8
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:07.196985Z
+last_push_artifact = 0x1d82
+last_push_artifact_type = "function"
