--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.610524Z
-last_push_artifact = 0x4005b6
+last_push_time = 2023-12-12T19:59:21.630965Z
+last_push_artifact = 0x400606
 last_push_artifact_type = "global variable"
