--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.220866Z
-last_push_artifact = 0x4040a0
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:21.241528Z
+last_push_artifact = 0x4019b6
+last_push_artifact_type = "function"
