--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4011a0]
-last_change = 2023-12-12T19:59:21.819492Z
-addr = 0x4011a0
-name = ".__isoc99_scanf"
-size = 0x1
+[0x404028]
+last_change = 2023-12-12T19:59:21.841452Z
+addr = 0x404028
+name = ""
+size = 0x8
