--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4040b8]
-last_change = 2023-12-12T19:59:21.736375Z
-addr = 0x4040b8
-name = "putchar"
-size = 0x1
+[0x404048]
+last_change = 2023-12-12T19:59:21.757134Z
+addr = 0x404048
+name = ""
+size = 0x8
