--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404110]
-last_change = 2023-12-12T19:59:21.909139Z
-addr = 0x404110
-name = "exit"
-size = 0x1
+[0x404008]
+last_change = 2023-12-12T19:59:21.930377Z
+addr = 0x404008
+name = ""
+size = 0x8
