--- a/comments.toml
+++ b/comments.toml
@@ -46,3 +46,9 @@ addr = 0x139c
 func_addr = 0x130b
 comment = "null a bunch of bytes\n"
 decompiled = true
+
+[0x4006f8]
+last_change = 2023-12-12T19:59:21.549515Z
+addr = 0x4006f8
+comment = "R_X86_64_JUMP_SLOT personality\n"
+decompiled = false
