--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x402008]
-last_change = 2023-12-12T19:59:21.199839Z
-addr = 0x402008
-name = "file"
-size = 0x8
+[0x4040a0]
+last_change = 2023-12-12T19:59:21.220866Z
+addr = 0x4040a0
+name = "stdin"
+size = 0x1
