--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x402010]
-last_change = 2023-12-12T19:59:21.424916Z
-addr = 0x402010
-name = "assertion"
-size = 0x1a
+[0x4003a0]
+last_change = 2023-12-12T19:59:21.445617Z
+addr = 0x4003a0
+name = "elf_gnu_hash_nbuckets"
+size = 0x4
