--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.424916Z
-last_push_artifact = 0x402010
+last_push_time = 2023-12-12T19:59:21.445617Z
+last_push_artifact = 0x4003a0
 last_push_artifact_type = "global variable"
