--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x400606]
-last_change = 2023-12-12T19:59:21.630965Z
-addr = 0x400606
-name = "aLibcStartMain"
-size = 0x12
+[0x404100]
+last_change = 2023-12-12T19:59:21.653580Z
+addr = 0x404100
+name = "setvbuf"
+size = 0x1
