--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4003b0]
-last_change = 2023-12-12T19:59:21.283099Z
-addr = 0x4003b0
-name = "elf_gnu_hash_indexes"
-size = 0x8
+[0x4003b8]
+last_change = 2023-12-12T19:59:21.303564Z
+addr = 0x4003b8
+name = "elf_gnu_hash_bucket"
+size = 0x1
