--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4040e8]
-last_change = 2023-12-12T19:59:21.569406Z
-addr = 0x4040e8
-name = "__libc_start_main"
+[0x4040a8]
+last_change = 2023-12-12T19:59:21.589701Z
+addr = 0x4040a8
+name = ""
 size = 0x1
