--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.569406Z
-last_push_artifact = 0x4040e8
+last_push_time = 2023-12-12T19:59:21.589701Z
+last_push_artifact = 0x4040a8
 last_push_artifact_type = "global variable"
