--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4005b0]
-last_change = 2023-12-12T19:59:21.384181Z
-addr = 0x4005b0
-name = "aStdin"
-size = 0x6
+[0x4040d0]
+last_change = 2023-12-12T19:59:21.405252Z
+addr = 0x4040d0
+name = "printf"
+size = 0x1
