--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.757134Z
-last_push_artifact = 0x404048
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:21.777894Z
+last_push_artifact = "Elf64_Sym"
+last_push_artifact_type = "struct"
