--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,7 +1,7 @@
 [metadata]
 name = "Elf64_Sym"
-size = 0x8
-last_change = 2023-12-12T19:59:21.950993Z
+size = 0x10
+last_change = 2023-12-12T19:59:21.971513Z
 
 [members.0x0]
 name = "st_name"
@@ -24,5 +24,11 @@ size = 0x1
 [members.0x6]
 name = "st_shndx"
 offset = 0x6
-type = ""
+type = "unsigned short"
 size = 0x2
+
+[members.0x8]
+name = "st_value"
+offset = 0x8
+type = ""
+size = 0x8
