--- a/functions/00401d80.toml
+++ b/functions/00401d80.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x401d80
 size = 0x5
-last_change = 2023-12-12T19:59:22.941363Z
+last_change = 2023-12-12T19:59:22.961264Z
+
+[header]
+last_change = 2023-12-12T19:59:22.961264Z
+name = "fini"
+addr = 0x401d80
