--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4005a3]
-last_change = 2023-12-12T19:59:22.760111Z
-addr = 0x4005a3
-name = "aPuts"
-size = 0x5
+[0x4005a8]
+last_change = 2023-12-12T19:59:22.779772Z
+addr = 0x4005a8
+name = "aPutchar"
+size = 0x8
