--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.620411Z
-last_push_artifact = 0x4005cb
+last_push_time = 2023-12-12T19:59:22.640267Z
+last_push_artifact = 0x4040f8
 last_push_artifact_type = "global variable"
