--- a/functions/004019b6.toml
+++ b/functions/004019b6.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x4019b6
 size = 0xf1
-last_change = 2023-12-12T19:59:22.819612Z
+last_change = 2023-12-12T19:59:22.839466Z
+
+[stack_vars.-0x30]
+last_change = 2023-12-12T19:59:22.839466Z
+offset = -48
+name = "envp"
+type = "long"
+size = 0x8
+addr = 0x4019b6
