--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404090]
-last_change = 2023-12-12T19:59:22.358300Z
-addr = 0x404090
-name = "stdout"
+[0x401180]
+last_change = 2023-12-12T19:59:22.378001Z
+addr = 0x401180
+name = ".prctl"
 size = 0x1
