--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4011c0]
-last_change = 2023-12-12T19:59:22.052498Z
-addr = 0x4011c0
-name = ".strerror"
+[0x4040d8]
+last_change = 2023-12-12T19:59:22.072936Z
+addr = 0x4040d8
+name = "__assert_fail"
 size = 0x1
