--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x40209d]
-last_change = 2023-12-12T19:59:22.859507Z
-addr = 0x40209d
-name = "path"
-size = 0xf
+[0x402008]
+last_change = 2023-12-12T19:59:22.879133Z
+addr = 0x402008
+name = "file"
+size = 0x8
