--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4005e2]
-last_change = 2023-12-12T19:59:22.538918Z
-addr = 0x4005e2
-name = "aRead"
-size = 0x5
+[0x4040f0]
+last_change = 2023-12-12T19:59:22.558883Z
+addr = 0x4040f0
+name = "execve"
+size = 0x1
