--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.478394Z
-last_push_artifact = 0x401120
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:22.498331Z
+last_push_artifact = "Elf64_Vernaux"
+last_push_artifact_type = "struct"
