--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.839466Z
-last_push_artifact = 0x4019b6
-last_push_artifact_type = "function"
+last_push_time = 2023-12-12T19:59:22.859507Z
+last_push_artifact = 0x40209d
+last_push_artifact_type = "global variable"
