--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x401110]
-last_change = 2023-12-12T19:59:22.681998Z
-addr = 0x401110
-name = ".putchar"
+[0x401140]
+last_change = 2023-12-12T19:59:22.700872Z
+addr = 0x401140
+name = ".printf"
 size = 0x1
