--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.134090Z
-last_push_artifact = "Elf64_Sym"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-12T19:59:22.154421Z
+last_push_artifact = 0x401160
+last_push_artifact_type = "global variable"
