--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.318327Z
-last_push_artifact = 0x404108
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:22.338491Z
+last_push_artifact = "Elf64_Sym"
+last_push_artifact_type = "struct"
