--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,10 +1,22 @@
 [metadata]
 name = "Elf64_Sym"
 size = 0x8
-last_change = 2023-12-10T08:12:32.169516Z
+last_change = 2023-12-12T19:59:22.338491Z
 
 [members.0x0]
 name = "st_name"
 offset = 0x0
-type = ""
+type = "unsigned int"
 size = 0x4
+
+[members.0x4]
+name = "st_info"
+offset = 0x4
+type = "unsigned char"
+size = 0x1
+
+[members.0x5]
+name = "st_other"
+offset = 0x5
+type = ""
+size = 0x1
