--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4005c4]
-last_change = 2023-12-12T19:59:22.600115Z
-addr = 0x4005c4
-name = "aPrintf"
-size = 0x7
+[0x4005cb]
+last_change = 2023-12-12T19:59:22.620411Z
+addr = 0x4005cb
+name = "aPrctl"
+size = 0x6
