--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4040f8]
-last_change = 2023-12-12T19:59:22.640267Z
-addr = 0x4040f8
-name = "prctl"
-size = 0x1
+[0x4005fd]
+last_change = 2023-12-12T19:59:22.661227Z
+addr = 0x4005fd
+name = "aStrerror"
+size = 0x9
