--- a/structs/Elf64_Sym.toml
+++ b/structs/Elf64_Sym.toml
@@ -1,10 +1,6 @@
 [metadata]
 name = "Elf64_Sym"
-size = 0x8
-last_change = 2023-12-10T08:12:32.169516Z
+size = 0x0
+last_change = 2023-12-12T19:59:22.114038Z
 
-[members.0x0]
-name = "st_name"
-offset = 0x0
-type = ""
-size = 0x4
+[members]
