--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.378001Z
-last_push_artifact = 0x401180
+last_push_time = 2023-12-12T19:59:22.398635Z
+last_push_artifact = 0x4040c0
 last_push_artifact_type = "global variable"
