--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x401140]
-last_change = 2023-12-12T19:59:22.700872Z
-addr = 0x401140
-name = ".printf"
+[0x4040c8]
+last_change = 2023-12-12T19:59:22.719635Z
+addr = 0x4040c8
+name = "puts"
 size = 0x1
