--- a/structs/Elf64_Dyn.toml
+++ b/structs/Elf64_Dyn.toml
@@ -1,10 +1,16 @@
 [metadata]
 name = "Elf64_Dyn"
-size = 0x8
-last_change = 2023-12-12T19:59:22.739329Z
+size = 0x10
+last_change = 2023-12-10T08:13:37.730650Z
 
 [members.0x0]
 name = "d_tag"
 offset = 0x0
+type = "unsigned long"
+size = 0x8
+
+[members.0x8]
+name = "d_un"
+offset = 0x8
 type = ""
 size = 0x8
