--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4040e0]
-last_change = 2023-12-12T19:59:22.237132Z
-addr = 0x4040e0
-name = "read"
+[0x4011d0]
+last_change = 2023-12-12T19:59:22.257734Z
+addr = 0x4011d0
+name = "start"
 size = 0x1
