--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.690734Z
-last_push_artifact = 0x402138
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:23.710569Z
+last_push_artifact = 0x401d10
+last_push_artifact_type = "function"
