--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4020e8]
-last_change = 2023-12-12T19:59:23.870828Z
-addr = 0x4020e8
-name = "aErrorFailedToR"
-size = 0x24
+[0x40209d]
+last_change = 2023-12-12T19:59:23.890725Z
+addr = 0x40209d
+name = "aProcSelfExe"
+size = 0xf
