--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.870828Z
-last_push_artifact = 0x4020e8
+last_push_time = 2023-12-12T19:59:23.890725Z
+last_push_artifact = 0x40209d
 last_push_artifact_type = "global variable"
