--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.590473Z
-last_push_artifact = 0x4005d1
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:23.610599Z
+last_push_artifact = "Elf64_Dyn"
+last_push_artifact_type = "struct"
