--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.630011Z
-last_push_artifact = 0x403e20
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-12T19:59:23.649150Z
+last_push_artifact = 0x4020ac
+last_push_artifact_type = "global variable"
